Fix scrolling issues on mobile nav bar opening.

--- a/src/components/hamburger.css
+++ b/src/components/hamburger.css
@@ -1,14 +1,14 @@
 .hamburger {
-  position: absolute;
+  position: fixed;
   top: 10px;
   right: 10px;
   cursor: pointer;
-  display: flex;
   flex-direction: column;
   height: 25px;
   justify-content: space-between;
   display: none;
   transition: .2s;
+  z-index: 1;
 }
 
 .hamburger_open {
@@ -35,6 +35,6 @@
 
 @media only screen and (max-width: 500px) {
   .hamburger {
-    display: inherit;
+    display: flex;
   }
 }
