--- a/src/components/header.css
+++ b/src/components/header.css
@@ -3,6 +3,5 @@
   justify-content: space-between;
   min-height: 100vh;
   max-height: 900px;
-  perspective: 800px;
 }
 
